# sp500-ep-project

./: README.md  pyproject.toml  record_dict.json
backup_dir/: backup_pe_df_actuals.parquet  backup_record_dict.json
input_dir/: DFII10.xlsx  sp-500-eps-est 2024 12 05.xlsx
output_dir/: sp500_pe_df_actuals.parquet
output_dir/estimates/: sp-500-eps-est 2024-11-29.parquet  sp-500-eps-est 2024-12-05.parquet
sp500-ep-project/: display_data.py  paths.py  update_data.py
sp500-ep-project/func_module/: display_helper_func.py  helper_func.py  read_data_func.py  test.py
sp500-ep-project/helper_functions/: __init__.py  display_helper_func.py  read_data_func.py
tests/: __init__.py
